--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,10 @@
     android:fitsSystemWindows="true"
     tools:context="com.team.formal.eyeshopping.MainActivity">
 
-    <org.opencv.android.JavaCameraView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/activity_surface_view" />
+    <!--<org.opencv.android.JavaCameraView-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent"-->
+        <!--android:id="@+id/activity_surface_view" />-->
 
 
     <!--<android.support.design.widget.AppBarLayout-->
@@ -27,7 +27,7 @@
 
     <!--</android.support.design.widget.AppBarLayout>-->
 
-    <!--<include layout="@layout/content_main" />-->
+    <include layout="@layout/content_main" />
 
     <!--<android.support.design.widget.FloatingActionButton-->
         <!--android:id="@+id/fab"-->
