--- a/app/src/main/res/layout/activity_next.xml
+++ b/app/src/main/res/layout/activity_next.xml
@@ -27,12 +27,12 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginBottom="20dp">
-    </TextView>>
+    </TextView>
 
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </ImageView>>
+    </ImageView>
 
 </LinearLayout>
