--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.team.formal.eyeshopping.MainActivity">
+    tools:context="com.team.formal.eyeshopping.CVMainActivity">
 
     <!--<org.opencv.android.JavaCameraView-->
         <!--android:layout_width="fill_parent"-->
