--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.team.formal.eyeshopping.CVMainActivity"
+    tools:context="com.team.formal.eyeshopping.MainActivity"
     tools:showIn="@layout/activity_main"
     android:orientation="vertical">
 
