--- a/app/src/main/res/layout/activity_finding_results.xml
+++ b/app/src/main/res/layout/activity_finding_results.xml
@@ -10,13 +10,14 @@
         android:id="@+id/list_view"
         android:layout_width="368dp"
         android:layout_height="551dp"
-        android:background="#11555555"
-        android:horizontalSpacing="5dp"
-        android:numColumns="1"
-        android:padding="10dp"
         android:stretchMode="columnWidth"
+        android:padding="10dp"
         android:verticalSpacing="5dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"></GridView>
+        android:horizontalSpacing="5dp"
+        android:background="#11555555"
+        android:numColumns="1"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
+    </GridView>
 
 </android.support.constraint.ConstraintLayout>
