--- a/app/src/main/res/layout/activity_finding_results.xml
+++ b/app/src/main/res/layout/activity_finding_results.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.team.formal.eyeshopping.ActivityFindingResults">
 
     <GridView
         android:id="@+id/list_view"
         android:layout_width="368dp"
         android:layout_height="551dp"
-        android:stretchMode="columnWidth"
-        android:padding="10dp"
-        android:verticalSpacing="5dp"
-        android:horizontalSpacing="5dp"
         android:background="#11555555"
+        android:horizontalSpacing="5dp"
         android:numColumns="1"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
-    </GridView>
+        android:padding="10dp"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="5dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp"></GridView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
