--- a/app/src/main/res/layout/activity_finding_results.xml
+++ b/app/src/main/res/layout/activity_finding_results.xml
@@ -9,8 +9,8 @@
 
     <GridView
         android:id="@+id/list_view"
-        android:layout_width="368dp"
-        android:layout_height="551dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#11555555"
         android:horizontalSpacing="5dp"
         android:numColumns="1"
