--- a/app/src/main/res/layout/activity_finding_results.xml
+++ b/app/src/main/res/layout/activity_finding_results.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.team.formal.eyeshopping.ActivityFindingResults">
 
-    <LinearLayout
-        android:id="@+id/contentMain"
-        android:layout_width="368dp"
-        android:layout_height="551dp"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.team.formal.eyeshopping.MainActivity"
+    <GridView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#11555555"
+        android:horizontalSpacing="5dp"
+        android:numColumns="1"
+        android:padding="10dp"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="5dp"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:showIn="@layout/activity_main">
+        tools:layout_editor_absoluteY="8dp"></GridView>
 
-    </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
