--- a/app/src/main/res/layout/grid_list_item.xml
+++ b/app/src/main/res/layout/grid_list_item.xml
@@ -12,8 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginBottom="35dp"
+        android:layout_marginRight="50dp"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="15dp"
         android:text="TextView" />
 
     <TextView
@@ -22,7 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_marginRight="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
+        android:textSize="18dp"
         android:text="TextView" />
 
     <ImageView
