메인 클릭 이벤트 추가, 카메라 동작 하게 만듦. Visually Similar Activity 이쁘게 수정. 뒤로가는 문제 수정.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,8 @@
                 android:textColor="#FF000000"
                 android:textSize="25dp"
                 android:gravity="center"
-                android:background="@color/main_white"/>
+                android:background="@color/main_white"
+                android:onClick="onRecentlySearchedListButtonClick"/>
 
             <Button
                 android:layout_width="0dp"
@@ -75,7 +76,8 @@
                 android:textColor="#FF000000"
                 android:textSize="25dp"
                 android:gravity="center"
-                android:background="@color/main_white"/>
+                android:background="@color/main_white"
+                android:onClick="onRecommendedProductListButtonClick"/>
 
         </LinearLayout>
 
@@ -96,7 +98,8 @@
                 android:textColor="#FF000000"
                 android:textSize="25dp"
                 android:gravity="center"
-                android:background="@color/main_white"/>
+                android:background="@color/main_white"
+                android:onClick="onPopularSearchedListButtonClick"/>
 
             <Button
                 android:layout_width="0dp"
@@ -108,7 +111,8 @@
                 android:textColor="#FF000000"
                 android:textSize="25dp"
                 android:gravity="center"
-                android:background="@color/main_white"/>
+                android:background="@color/main_white"
+                android:onClick="onGreatlyIncreasedProductListButtonClick"/>
 
         </LinearLayout>
 
