--- a/app/src/main/res/layout/activity_visually_similar_image.xml
+++ b/app/src/main/res/layout/activity_visually_similar_image.xml
@@ -15,9 +15,20 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="60dp"
+            android:theme="@style/ToolBarStyle"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="유사 상품 이미지"
+            android:textColor="#FF000000"
+            android:textSize="20dp"
+            android:layout_gravity="center"
+            android:id="@+id/toolbar_title" />
+
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -27,9 +38,9 @@
         android:layout_height="match_parent"
         android:stretchMode="columnWidth"
         android:padding="10dp"
-        android:verticalSpacing="5dp"
-        android:horizontalSpacing="5dp"
-        android:background="#11555555"
+        android:verticalSpacing="8dp"
+        android:horizontalSpacing="8dp"
+        android:background="#00555555"
         android:numColumns="2">
     </GridView>
 
