--- a/app/src/main/res/layout/activity_recommend_products.xml
+++ b/app/src/main/res/layout/activity_recommend_products.xml
@@ -35,28 +35,29 @@
         android:id="@+id/recommend_product_list_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="6"
         android:background="@color/main_white">
     </ListView>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="5dp"
         android:background="@color/main_white">
 
         <TextView
+            android:id="@+id/recommend_date"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"/>
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:textAlignment="viewEnd"
+            android:paddingRight="40dp"
+            android:textSize="18dp"
+            android:text="2017.06.05 기준"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"/>
-
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
