--- a/app/src/main/res/layout/recommend_list_view_item.xml
+++ b/app/src/main/res/layout/recommend_list_view_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="47dp"
     android:orientation="horizontal"
     android:padding="5dp"
     android:layout_marginBottom="1dp">
@@ -9,7 +9,8 @@
     <TextView
         android:layout_width="20dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
+        android:textSize="15dp"
         android:background="@color/main_bottom"
         android:layout_gravity="center_vertical"
         android:gravity="center"
@@ -19,6 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:textSize="15dp"
+        android:textColor="#aa000000"
         android:layout_marginLeft="20dp"
         android:id="@+id/recommend_product_keyword_text"/>
 
