추천 상품 Local DB 쿼리 구현 및 Select시 UI 및 연계 구현 (현재 Url 데이터 미비로 실행 시 에러남) 서버 DB 쿼리 구현 및 더미로 테스트

--- a/app/src/main/res/layout/recommend_list_view_item.xml
+++ b/app/src/main/res/layout/recommend_list_view_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="47dp"
     android:orientation="horizontal"
     android:padding="5dp"
-    android:layout_marginBottom="1dp">
+    android:layout_marginBottom="1dp"
+    android:id="@+id/recommend_layout">
 
     <TextView
         android:layout_width="20dp"
