--- a/app/src/main/res/layout/activity_finding_results_select.xml
+++ b/app/src/main/res/layout/activity_finding_results_select.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/transparent"
     android:orientation="vertical"
     tools:context="com.team.formal.eyeshopping.ActivityFindingResults">
 
@@ -20,13 +21,13 @@
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <TextView
+                android:id="@+id/toolbar_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="상품 선택"
                 android:textColor="#FF000000"
-                android:layout_gravity="center"
-                android:textSize="20dp"
-                android:id="@+id/toolbar_title" />
+                android:textSize="20dp" />
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
@@ -34,35 +35,73 @@
     <ImageView
         android:id="@+id/view_image"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="8"
+        android:background="@drawable/findings_layout"
+        android:baselineAlignBottom="false"></ImageView>
+
+    <TextView
+        android:id="@+id/Product_name"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="8">
-    </ImageView>
+        android:layout_weight="1"
+        android:layout_gravity="right"
+        android:layout_marginRight="120dp"
+        android:layout_marginTop="30dp"
+        android:text="상품 "
+        android:textColor="#FF000000"
+        android:textSize="18dp"
+        />
+
+    <TextView
+        android:id="@+id/Product_price"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_gravity="right"
+        android:layout_marginBottom="30dp"
+        android:layout_marginRight="120dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
+        android:text="최저가 "
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="18dp" />
+
+    <CheckBox
+        android:id="@+id/checkbox"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:button="@drawable/checkbox_image"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
+        android:background="@color/main_bottom"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/selection_cancel"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/transparent"
-            android:text="Cancel"
             android:layout_gravity="center"
-            />
+            android:layout_marginRight="0.5dp"
+            android:layout_weight="1"
+            android:background="@drawable/findings_layout"
+            android:text="Cancel" />
 
         <Button
             android:id="@+id/selection_shopping"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/transparent"
-            android:text="Shopping"
             android:layout_gravity="center"
-            />
+            android:layout_marginLeft="0.5dp"
+            android:layout_weight="1"
+            android:background="@drawable/findings_layout"
+            android:text="Shopping" />
 
     </LinearLayout>
 </LinearLayout>
