추천 상품 더미 데이터 삽입 함수 대충 맹금.  메인 액티비티, Splash & Logo Image & Icon 삽입.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="7">
+        android:layout_weight="7"
+        android:background="@drawable/grid_item_border"
+        android:paddingBottom="1dp">
 
         <android.support.v4.view.ViewPager
             xmlns:android="http://schemas.android.com/apk/res/android"
