Cancel 버튼 오타 수

--- a/app/src/main/res/layout/activity_visually_similar_image_select.xml
+++ b/app/src/main/res/layout/activity_visually_similar_image_select.xml
@@ -50,7 +50,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/transparent"
-            android:text="Cancle"
+            android:text="Cancel"
             android:layout_gravity="center"
             />
 
