배경색 등 소소한 수정 ..

--- a/app/src/main/res/layout/activity_recent_search.xml
+++ b/app/src/main/res/layout/activity_recent_search.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.team.formal.eyeshopping.ActivityRecentSearch">
+    tools:context="com.team.formal.eyeshopping.ActivityRecentSearch"
+    android:background="@color/main_white"
+    >
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
