--- a/app/src/main/res/drawable/grid_item_border.xml
+++ b/app/src/main/res/drawable/grid_item_border.xml
@@ -4,7 +4,8 @@
     <solid android:color="#00ffffff" />
     <stroke
         android:width="2dp"
-        android:color="#22000000" >
+        android:color="#22000000"
+        >
 
     </stroke>
 
