--- a/app/src/main/res/layout/grid_recent_item.xml
+++ b/app/src/main/res/layout/grid_recent_item.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
+        android:singleLine="true"
         android:textSize="18dp"
         android:layout_alignTop="@+id/recent_product_thumbnail"
         android:text="TextView"/>
