--- a/app/src/main/res/layout/activity_finding_results_select.xml
+++ b/app/src/main/res/layout/activity_finding_results_select.xml
@@ -68,12 +68,12 @@
         android:textSize="20dp" />
 
     <CheckBox
-        android:id="@+id/checkbox"
+        android:id="@+id/likeBox"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="right"
-        android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
         android:button="@drawable/checkbox_image"
         android:textStyle="bold" />
 
