--- a/app/src/main/res/layout/grid_recent_item.xml
+++ b/app/src/main/res/layout/grid_recent_item.xml
@@ -20,10 +20,11 @@
         android:id="@+id/recent_str"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|center"
-        android:textSize="18dp"
         android:layout_alignTop="@+id/recent_product_thumbnail"
-        android:text="TextView"/>
+        android:layout_gravity="top|center"
+        android:singleLine="true"
+        android:text="TextView"
+        android:textSize="18dp" />
 
     <com.team.formal.eyeshopping.SquareListView
         android:id="@+id/grid_recent_item_list_view"
